# internal/routes/v2/updates.go
@@ -12,11 +12,12 @@ import (
 	"github.com/jmoiron/sqlx"
 )
 
-func registerUpdates(r chi.Router, db *sqlx.DB, s3conn *storage.S3Connector, s3BaseURL string) {
+func registerUpdates(r chi.Router, db *sqlx.DB, s3conn *storage.S3Connector, apiBaseURL, s3Prefix string) {
 	r.Route("/updates", func(r chi.Router) {
 		r.Group(func(r chi.Router) {
 			r.Use(httprate.LimitByIP(30, time.Minute))
-			r.Get("/manifest", handlers.GetUpdateManifest(db, s3BaseURL))
+			r.Get("/manifest", handlers.GetUpdateManifest(db, apiBaseURL))
+			r.Get("/releases/{version}/download", handlers.DownloadRelease(db, s3conn, s3Prefix))
 		})
 
 		r.Group(func(r chi.Router) {
@@ -24,8 +25,8 @@ func registerUpdates(r chi.Router, db *sqlx.DB, s3conn *storage.S3Connector, s3B
 			r.Use(httprate.LimitByIP(30, time.Minute))
 
 			r.Get("/releases", handlers.ListReleases(db))
-			r.Post("/releases", handlers.CreateRelease(db, s3conn))
-			r.Delete("/releases/{version}", handlers.DeleteRelease(db, s3conn))
+			r.Post("/releases", handlers.CreateRelease(db, s3conn, s3Prefix))
+			r.Delete("/releases/{version}", handlers.DeleteRelease(db, s3conn, s3Prefix))
 			r.Patch("/releases/{version}/channel", handlers.PatchReleaseChannel(db))
 		})
 	})
